test/libyul/yulSyntaxTests/for_expr_invalid_1.yul
{
	for {} {} {} {}
}
// ----
// ParserError 1856: (10-11): Literal or identifier expected.
